# hub-mirror-action

./: .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  README.md  README_CN.md  README_en.md  action.yml  entrypoint.sh  hubmirror.py
.github/workflows/: flake8.yaml  verify-github-to-gitcode.yml  verify-on-ubuntu-org.yml  verify-on-ubuntu-org2user.yml  verify-on-ubuntu-private.yml  verify-on-ubuntu-user-cache.yml  verify-on-ubuntu-user.yml  verify-on-ubuntu.yml  yamaeye.yml
hub-mirror/: hub.py  hubmirror.py  mirror.py  platforms.py  pyproject.toml  requirements.txt  utils.py
hub-mirror/tests/: test_utils.py
templates/: hub-mirror.yml
